--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,10 @@
   "authors": [
     "Surendher"
   ],
+  "dependencies": [
+      "angular":">=1.2.18",
+      "angular-validator": ">=0.2.3"
+  ],
   "license": "Y",
   "homepage": "Null",
   "ignore": [
